fgsm and naive as baselines, implemented method

--- a/Patient_and_Consistent/patient.ipynb
+++ b/Patient_and_Consistent/patient.ipynb
@@ -221,7 +221,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 14/200:  20%|██        | 118/586 [00:05<00:18, 25.65it/s]"
+      "Epoch 14/200: 100%|██████████| 586/586 [00:23<00:00, 24.58it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [14/200] - Train Loss: 2.7521, Train Acc: 30.78% | Val Loss: 1.3240, Val Acc: 64.04%\n",
+      "New best student model found at epoch 14 with Val Acc: 64.04%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 15/200:  88%|████████▊ | 518/586 [00:20<00:02, 25.32it/s]"
      ]
     }
    ],
