--- a/fgsm_kd/train.ipynb
+++ b/fgsm_kd/train.ipynb
@@ -117,7 +117,97 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4/200:  33%|███▎      | 199/606 [00:12<00:17, 23.51it/s]"
+      "Epoch 4/200: 100%|██████████| 606/606 [00:37<00:00, 16.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [4/200] - Train Loss: 4.5365, Train Acc: 42.06% | Val Loss: 1.7525, Val Acc: 47.42%\n",
+      "New best student model found at epoch 4 with Val Acc: 47.42%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/200: 100%|██████████| 606/606 [00:36<00:00, 16.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [5/200] - Train Loss: 4.2473, Train Acc: 45.55% | Val Loss: 1.5415, Val Acc: 54.36%\n",
+      "New best student model found at epoch 5 with Val Acc: 54.36%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/200: 100%|██████████| 606/606 [00:36<00:00, 16.40it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [6/200] - Train Loss: 4.0151, Train Acc: 47.97% | Val Loss: 1.5071, Val Acc: 57.38%\n",
+      "New best student model found at epoch 6 with Val Acc: 57.38%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/200: 100%|██████████| 606/606 [00:37<00:00, 16.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [7/200] - Train Loss: 3.8248, Train Acc: 49.78% | Val Loss: 1.4025, Val Acc: 58.90%\n",
+      "New best student model found at epoch 7 with Val Acc: 58.90%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/200: 100%|██████████| 606/606 [00:37<00:00, 16.20it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [8/200] - Train Loss: 3.6777, Train Acc: 51.32% | Val Loss: 1.4989, Val Acc: 58.92%\n",
+      "New best student model found at epoch 8 with Val Acc: 58.92%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/200: 100%|██████████| 606/606 [00:36<00:00, 16.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [9/200] - Train Loss: 3.5390, Train Acc: 52.74% | Val Loss: 1.4708, Val Acc: 61.53%\n",
+      "New best student model found at epoch 9 with Val Acc: 61.53%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/200:  67%|██████▋   | 406/606 [00:24<00:12, 16.60it/s]"
      ]
     }
    ],
