--- a/Hard_problems/logit_guided/train.ipynb
+++ b/Hard_problems/logit_guided/train.ipynb
@@ -283,7 +283,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 17/200:  65%|██████▌   | 395/606 [00:26<00:14, 14.88it/s]"
+      "Epoch 17/200: 100%|██████████| 606/606 [00:40<00:00, 14.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [17/200] - Train Loss: 2.7891, Train Acc: 61.00% | Val Loss: 1.1009, Val Acc: 70.01%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 18/200:  39%|███▉      | 237/606 [00:15<00:25, 14.55it/s]"
      ]
     }
    ],
