--- a/fgsm_all_kd/train.ipynb
+++ b/fgsm_all_kd/train.ipynb
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating FGSM samples:  42%|████▏     | 21238/50000 [04:45<06:41, 71.66it/s] "
+      "Generating FGSM samples:  47%|████▋     | 23649/50000 [05:17<06:09, 71.23it/s] "
      ]
     }
    ],
