new test for just teacher

--- a/Hard_problems/all/train.ipynb
+++ b/Hard_problems/all/train.ipynb
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating adversarial samples:  14%|█▎        | 6769/50000 [07:13<52:47, 13.65it/s]  "
+      "Generating adversarial samples:  39%|███▉      | 19697/50000 [23:03<42:23, 11.91it/s]  "
      ]
     }
    ],
