--- a/fgsm_all_kd/train.ipynb
+++ b/fgsm_all_kd/train.ipynb
@@ -39,7 +39,145 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating FGSM samples:  47%|████▋     | 23649/50000 [05:17<06:09, 71.23it/s] "
+      "Generating FGSM samples: 100%|██████████| 50000/50000 [11:13<00:00, 74.22it/s] \n",
+      "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training student (SqueezeNet) with teacher (ResNet18) distillation and FGSM adversarial augmentation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/200: 100%|██████████| 782/782 [01:09<00:00, 11.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/200] - Train Loss: 6.6462, Train Acc: 19.38% | Val Loss: 1.9756, Val Acc: 28.65%\n",
+      "New best student model found at epoch 1 with Val Acc: 28.65%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/200: 100%|██████████| 782/782 [01:09<00:00, 11.20it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2/200] - Train Loss: 5.2075, Train Acc: 34.84% | Val Loss: 1.6859, Val Acc: 44.41%\n",
+      "New best student model found at epoch 2 with Val Acc: 44.41%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/200: 100%|██████████| 782/782 [01:08<00:00, 11.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [3/200] - Train Loss: 4.5989, Train Acc: 42.52% | Val Loss: 1.7597, Val Acc: 48.43%\n",
+      "New best student model found at epoch 3 with Val Acc: 48.43%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/200: 100%|██████████| 782/782 [01:07<00:00, 11.62it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [4/200] - Train Loss: 4.2323, Train Acc: 46.88% | Val Loss: 1.7602, Val Acc: 50.63%\n",
+      "New best student model found at epoch 4 with Val Acc: 50.63%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/200: 100%|██████████| 782/782 [01:08<00:00, 11.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [5/200] - Train Loss: 3.9663, Train Acc: 49.91% | Val Loss: 1.4740, Val Acc: 55.72%\n",
+      "New best student model found at epoch 5 with Val Acc: 55.72%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/200: 100%|██████████| 782/782 [01:08<00:00, 11.40it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [6/200] - Train Loss: 3.7343, Train Acc: 52.47% | Val Loss: 1.4482, Val Acc: 59.41%\n",
+      "New best student model found at epoch 6 with Val Acc: 59.41%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/200: 100%|██████████| 782/782 [01:07<00:00, 11.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [7/200] - Train Loss: 3.5441, Train Acc: 54.48% | Val Loss: 1.2854, Val Acc: 61.48%\n",
+      "New best student model found at epoch 7 with Val Acc: 61.48%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/200: 100%|██████████| 782/782 [01:08<00:00, 11.48it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [8/200] - Train Loss: 3.3959, Train Acc: 56.07% | Val Loss: 1.2753, Val Acc: 62.62%\n",
+      "New best student model found at epoch 8 with Val Acc: 62.62%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/200:  51%|█████     | 399/782 [00:35<00:33, 11.28it/s]"
      ]
     }
    ],
