--- a/Hard_problems/logit_guided/train.ipynb
+++ b/Hard_problems/logit_guided/train.ipynb
@@ -297,7 +297,282 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 18/200:  39%|███▉      | 237/606 [00:15<00:25, 14.55it/s]"
+      "Epoch 18/200: 100%|██████████| 606/606 [00:39<00:00, 15.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [18/200] - Train Loss: 2.7576, Train Acc: 60.95% | Val Loss: 1.1424, Val Acc: 69.89%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 19/200: 100%|██████████| 606/606 [00:40<00:00, 15.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [19/200] - Train Loss: 2.7295, Train Acc: 61.33% | Val Loss: 1.0562, Val Acc: 71.33%\n",
+      "New best student model found at epoch 19 with Val Acc: 71.33%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 20/200: 100%|██████████| 606/606 [00:40<00:00, 15.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [20/200] - Train Loss: 2.6602, Train Acc: 62.02% | Val Loss: 1.0789, Val Acc: 71.97%\n",
+      "New best student model found at epoch 20 with Val Acc: 71.97%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 21/200: 100%|██████████| 606/606 [00:40<00:00, 15.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [21/200] - Train Loss: 2.6401, Train Acc: 62.13% | Val Loss: 1.0887, Val Acc: 72.00%\n",
+      "New best student model found at epoch 21 with Val Acc: 72.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 22/200: 100%|██████████| 606/606 [00:39<00:00, 15.36it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [22/200] - Train Loss: 2.6140, Train Acc: 62.21% | Val Loss: 1.1140, Val Acc: 71.24%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 23/200: 100%|██████████| 606/606 [00:40<00:00, 14.86it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [23/200] - Train Loss: 2.5843, Train Acc: 62.57% | Val Loss: 1.1533, Val Acc: 70.49%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 24/200: 100%|██████████| 606/606 [00:40<00:00, 15.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [24/200] - Train Loss: 2.5511, Train Acc: 62.80% | Val Loss: 1.0733, Val Acc: 71.07%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 25/200: 100%|██████████| 606/606 [00:40<00:00, 15.07it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [25/200] - Train Loss: 2.5302, Train Acc: 63.22% | Val Loss: 1.0639, Val Acc: 72.33%\n",
+      "New best student model found at epoch 25 with Val Acc: 72.33%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 26/200: 100%|██████████| 606/606 [00:40<00:00, 14.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [26/200] - Train Loss: 2.5020, Train Acc: 63.19% | Val Loss: 1.0166, Val Acc: 72.64%\n",
+      "New best student model found at epoch 26 with Val Acc: 72.64%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 27/200: 100%|██████████| 606/606 [00:53<00:00, 11.23it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [27/200] - Train Loss: 2.4686, Train Acc: 63.59% | Val Loss: 1.1228, Val Acc: 72.45%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 28/200: 100%|██████████| 606/606 [00:53<00:00, 11.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [28/200] - Train Loss: 2.4417, Train Acc: 63.67% | Val Loss: 1.0474, Val Acc: 73.44%\n",
+      "New best student model found at epoch 28 with Val Acc: 73.44%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 29/200: 100%|██████████| 606/606 [00:52<00:00, 11.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [29/200] - Train Loss: 2.4196, Train Acc: 63.96% | Val Loss: 0.9566, Val Acc: 74.20%\n",
+      "New best student model found at epoch 29 with Val Acc: 74.20%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 30/200: 100%|██████████| 606/606 [00:52<00:00, 11.55it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [30/200] - Train Loss: 2.4113, Train Acc: 63.97% | Val Loss: 1.0063, Val Acc: 73.60%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 31/200: 100%|██████████| 606/606 [00:53<00:00, 11.32it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [31/200] - Train Loss: 2.4066, Train Acc: 64.15% | Val Loss: 1.0423, Val Acc: 72.56%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 32/200: 100%|██████████| 606/606 [00:52<00:00, 11.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [32/200] - Train Loss: 2.3727, Train Acc: 64.31% | Val Loss: 1.1797, Val Acc: 71.35%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 33/200: 100%|██████████| 606/606 [00:52<00:00, 11.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [33/200] - Train Loss: 2.3668, Train Acc: 64.40% | Val Loss: 0.9162, Val Acc: 74.57%\n",
+      "New best student model found at epoch 33 with Val Acc: 74.57%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 34/200: 100%|██████████| 606/606 [00:52<00:00, 11.48it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [34/200] - Train Loss: 2.3499, Train Acc: 64.67% | Val Loss: 0.9620, Val Acc: 74.31%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 35/200: 100%|██████████| 606/606 [00:53<00:00, 11.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [35/200] - Train Loss: 2.3244, Train Acc: 64.67% | Val Loss: 1.0539, Val Acc: 72.85%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 36/200: 100%|██████████| 606/606 [00:52<00:00, 11.58it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [36/200] - Train Loss: 2.3166, Train Acc: 64.94% | Val Loss: 0.8930, Val Acc: 75.09%\n",
+      "New best student model found at epoch 36 with Val Acc: 75.09%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 37/200:  63%|██████▎   | 381/606 [00:32<00:20, 11.21it/s]"
      ]
     }
    ],
