--- a/Hard_problems/all/train.ipynb
+++ b/Hard_problems/all/train.ipynb
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating adversarial samples:  39%|███▉      | 19697/50000 [23:03<42:23, 11.91it/s]  "
+      "Generating adversarial samples:  44%|████▍     | 21999/50000 [26:05<39:01, 11.96it/s]  "
      ]
     }
    ],
