--- a/Hard_problems/logit_guided/test.ipynb
+++ b/Hard_problems/logit_guided/test.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "902ccd81-8cc2-46ff-bbcb-1c6b585dbef9",
+   "execution_count": 3,
+   "id": "d2e077bd-902e-49cb-9b44-b7d454957852",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T02:33:40.788788Z",
-     "iopub.status.busy": "2025-04-22T02:33:40.788165Z",
-     "iopub.status.idle": "2025-04-22T02:33:46.534516Z",
-     "shell.execute_reply": "2025-04-22T02:33:46.533844Z",
-     "shell.execute_reply.started": "2025-04-22T02:33:40.788759Z"
+     "iopub.execute_input": "2025-04-22T00:26:08.182026Z",
+     "iopub.status.busy": "2025-04-22T00:26:08.181530Z",
+     "iopub.status.idle": "2025-04-22T00:26:10.227855Z",
+     "shell.execute_reply": "2025-04-22T00:26:10.225503Z",
+     "shell.execute_reply.started": "2025-04-22T00:26:08.182003Z"
     }
    },
    "outputs": [
@@ -18,26 +18,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files already downloaded and verified\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Files already downloaded and verified\n",
       "Loaded best student model from ./models/cifar10_best_student_model.pth\n",
-      "Test Loss: 0.8609\n",
-      "Test Accuracy: 74.12%\n"
+      "Test Loss: 0.9003\n",
+      "Test Accuracy: 76.71%\n"
      ]
     }
    ],
