--- a/fgsm_all_kd/train.ipynb
+++ b/fgsm_all_kd/train.ipynb
@@ -177,7 +177,51 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9/200:  51%|█████     | 399/782 [00:35<00:33, 11.28it/s]"
+      "Epoch 9/200: 100%|██████████| 782/782 [01:08<00:00, 11.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [9/200] - Train Loss: 3.2645, Train Acc: 57.59% | Val Loss: 1.1756, Val Acc: 65.07%\n",
+      "New best student model found at epoch 9 with Val Acc: 65.07%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/200: 100%|██████████| 782/782 [01:07<00:00, 11.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [10/200] - Train Loss: 3.1706, Train Acc: 58.43% | Val Loss: 1.1521, Val Acc: 65.73%\n",
+      "New best student model found at epoch 10 with Val Acc: 65.73%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 11/200: 100%|██████████| 782/782 [01:06<00:00, 11.69it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [11/200] - Train Loss: 3.0743, Train Acc: 59.24% | Val Loss: 1.1912, Val Acc: 65.58%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 12/200:  24%|██▎       | 185/782 [00:16<00:53, 11.21it/s]"
      ]
     }
    ],
