--- a/Hard_problems/logit_guided/train.ipynb
+++ b/Hard_problems/logit_guided/train.ipynb
@@ -572,7 +572,64 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 37/200:  63%|██████▎   | 381/606 [00:32<00:20, 11.21it/s]"
+      "Epoch 37/200: 100%|██████████| 606/606 [00:52<00:00, 11.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [37/200] - Train Loss: 2.2972, Train Acc: 64.95% | Val Loss: 0.9336, Val Acc: 75.39%\n",
+      "New best student model found at epoch 37 with Val Acc: 75.39%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 38/200: 100%|██████████| 606/606 [00:52<00:00, 11.52it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [38/200] - Train Loss: 2.2820, Train Acc: 65.08% | Val Loss: 0.9504, Val Acc: 74.02%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 39/200: 100%|██████████| 606/606 [00:52<00:00, 11.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [39/200] - Train Loss: 2.2625, Train Acc: 65.24% | Val Loss: 0.9508, Val Acc: 75.07%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 40/200: 100%|██████████| 606/606 [00:53<00:00, 11.43it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [40/200] - Train Loss: 2.2614, Train Acc: 65.33% | Val Loss: 0.9396, Val Acc: 75.12%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 41/200:  60%|██████    | 366/606 [00:31<00:20, 11.50it/s]"
      ]
     }
    ],
